<resources>
    <string name="app_name">StoryAppDicoding</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Mau belajar Android, iOS, Machine Learning, Cloud, Front-End, Back-End, dan bidang IT lainnya? Di Dicoding aja!</string>
    <string name="title_welcome_page">Selamat datang di Dicoding!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Selamat Datang di Aplikasi Sharing Story</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="error_fetching_stories">Gagal mengambil cerita. Silakan coba lagi nanti.</string>
    <string name="logout">Keluar</string>
    <string name="error_token">Token tidak tersedia. Silakan login kembali.</string>
    <string name="logo_dicoding">Logo Dicoding</string>
    <string name="daftar_akun_anda">Daftar akun anda</string>
    <string name="logo_dicoding_signup">Logo Dicoding</string>
    <string name="masuk_ke_akun_anda">Masuk ke akun anda</string>
    <string name="logo_dicoding_main">Logo Dicoding</string>
    <string name="daftar_certa">Daftar Certa</string>
    <string name="tambahkan_cerita_anda">Tambahkan Cerita Anda</string>
    <string name="nama">Nama</string>
    <string name="deskripsi">Penjelasan</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="upload">Upload</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="retry">Coba Lagi</string>
</resources>