<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.add.AddActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_add"
        android:layout_width="0dp"
        android:layout_height="218dp"
        android:contentDescription="@string/logo_dicoding"
        android:src="@drawable/baseline_image_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_gallery"
        android:layout_width="123dp"
        android:layout_height="62dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="60dp"
        android:text="@string/gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_add" />

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="123dp"
        android:layout_height="62dp"
        android:layout_marginTop="28dp"
        android:text="@string/camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_gallery"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_add" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="243dp"
        android:layout_height="61dp"
        android:layout_marginTop="28dp"
        android:text="@string/upload"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionEditTextLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="171dp"
        android:layout_margin="32dp"
        android:backgroundTint="@color/black"
        android:hint="@string/deskripsi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_camera">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ed_add_description"
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:gravity="top|start"
        android:inputType="textMultiLine"
        android:textColor="@color/black"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="433dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="72dp"
        android:layout_height="65dp"
        android:layout_marginTop="28dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>